--- a/ColorfulBox/ColorfulBox/Views/HomePage.xaml
+++ b/ColorfulBox/ColorfulBox/Views/HomePage.xaml
@@ -6,6 +6,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
       xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+      xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
       xmlns:colorfulBox="using:ColorfulBox"
       d:DesignHeight="500"
       d:DesignWidth="600"
