--- a/ColorfulBox/ColorfulBox/Views/SettingsPage.xaml
+++ b/ColorfulBox/ColorfulBox/Views/SettingsPage.xaml
@@ -2,6 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:ColorfulBox.Views"
+      xmlns:fcu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
+      xmlns:cu="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
@@ -36,6 +38,8 @@
                                  Checked="OnThemeRadioButtonChecked"
                                  Content="{Binding Source={StaticResource R},Path=Labels.Dark}" />
                     <RadioButton Tag="Default"
+                                 fcu:Visibility="Visible"
+                                 cu:Visibility="Collapsed"
                                  Checked="OnThemeRadioButtonChecked"
                                  Content="{Binding Source={StaticResource R},Path=Labels.Default}" />
                 </StackPanel>
